--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-yandex-maps": "^4.6.0",
     "remove": "^0.1.5",
     "typescript": "^4.8.2",
     "typescript-plugin-css-modules": "^3.4.0",
